--- a/public/index.html
+++ b/public/index.html
@@ -24,21 +24,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Lee Junho Official</title>
-</head>
 
-<!--Start of Tawk.to Script-->
+  <!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
-  var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-  (function () {
-    var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-    s1.async = true;
-    s1.src = 'https://embed.tawk.to/676df11daf5bfec1dbe2abd3/1ig2nbmus';
-    s1.charset = 'UTF-8';
-    s1.setAttribute('crossorigin', '*');
-    s0.parentNode.insertBefore(s1, s0);
-  })();
-</script>
-<!--End of Tawk.to Script-->
+  var _smartsupp = _smartsupp || {};
+  _smartsupp.key = 'ffb81a7a4ddcc9ab791edbeea865f71192160df0';
+  window.smartsupp||(function(d) {
+    var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+    s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+    c.type='text/javascript';c.charset='utf-8';c.async=true;
+    c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+  })(document);
+  </script>
+  <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+</head>
 
 
 <body>
